@@ -1,6 +1,8 @@
 package com.rahmatullahsaruk.stock_management.service;
 
+import com.rahmatullahsaruk.stock_management.dto.ProductDTO;
 import com.rahmatullahsaruk.stock_management.entity.Product;
+import com.rahmatullahsaruk.stock_management.mapper.ProductMapper;
 import com.rahmatullahsaruk.stock_management.repository.ProductRepo;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
@@ -8,6 +10,7 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 @Transactional
@@ -20,36 +23,26 @@ public class ProductService {
         this.productRepo = productRepo;
     }
 
-    // Create or update a product
     public Product saveProduct(Product product) {
         return productRepo.save(product);
     }
 
-    // Get all products
     public List<Product> getAllProducts() {
         return productRepo.findAll();
     }
 
-    // Get product by ID
     public Optional<Product> getProductById(Long id) {
         return productRepo.findById(id);
     }
 
-    // Delete product by ID
     public void deleteProduct(Long id) {
         productRepo.deleteById(id);
     }
 
-    // Example method to get all products as DTOs (if needed)
-    public List<Product> getAllProductDTOs() {
-        return productRepo.findAll().stream().map(product -> {
-            Product dto = new Product();
-            dto.setId(product.getId());
-            dto.setProductName(product.getProductName()); // ✅ fixed
-            dto.setDescription(product.getDescription());
-            dto.setPrice(product.getPrice());
-            dto.setQuantity(product.getQuantity());
-            return dto;
-        }).toList();
+    // Convert all entities to DTOs
+    public List<ProductDTO> getAllProductDTOs() {
+        return productRepo.findAll().stream()
+                .map(ProductMapper::toDTO)
+                .collect(Collectors.toList());
     }
 }
